<resources>
    <string name="a">
        \n
গাহি সাম্যের গান-\n
যেখানে আসিয়া এক হয়ে গেছে সব বাধা-ব্যবধান\n
যেখানে মিশছে হিন্দু-বৌদ্ধ-মুস্‌লিম-ক্রীশ্চান।\n
গাহি সাম্যের গান!\n
কে তুমি?- পার্সী? জৈন? ইহুদী? সাঁওতাল, ভীল, গারো?\n
কন্‌ফুসিয়াস্‌? চার্বআখ চেলা? ব’লে যাও, বলো আরো!\n
বন্ধু, যা-খুশি হও,\n
পেটে পিঠে কাঁধে মগজে যা-খুশি পুঁথি ও কেতাব বও,\n
কোরান-পুরাণ-বেদ-বেদান্ত-বাইবেল-ত্রিপিটক-\n
জেন্দাবেস্তা-গ্রন্থসাহেব প’ড়ে যাও, য্ত সখ-\n
কিন্তু, কেন এ পন্ডশ্রম, মগজে হানিছ শূল?\n
দোকানে কেন এ দর কষাকষি? -পথে ফুটে তাজা ফুল!\n
তোমাতে রয়েছে সকল কেতাব সকল কালের জ্ঞান,\n
সকল শাস্র খুঁজে পাবে সখা, খুলে দেখ নিজ প্রাণ!\n
তোমাতে রয়েছে সকল ধর্ম, সকল যুগাবতার,\n
তোমার হৃষয় বিশ্ব-দেউল সকল দেবতার।\n
কেন খুঁজে ফের’ দেবতা ঠাকুর মৃত পুঁথি -কঙ্কালে?\n
হাসিছেন তিনি অমৃত-হিয়ার নিভৃত অন্তরালে!\n
        \n
        \n
        বন্ধু, বলিনি ঝুট,\n
এইখানে এসে লুটাইয়া পড়ে সকল রাজমুকুট।\n
এই হৃদ্য়ই সে নীলাচল, কাশী, মথুরা, বৃন্দাবন,\n
বুদ্ধ-গয়া এ, জেরুজালেম্‌ এ, মদিনা, কাবা-ভবন,\n
মস্‌জিদ এই, মন্দির এই, গির্জা এই হৃদয়,\n
এইখানে ব’সে ঈসা মুসা পেল সত্যের পরিচয়।\n
এই রণ-ভূমে বাঁশীর কিশোর গাহিলেন মহা-গীতা,\n
এই মাঠে হ’ল মেষের রাখাল নবীরা খোদার মিতা।\n
এই হৃদয়ের ধ্যান-গুহা-মাঝে বসিয়া শাক্যমুনি\n
ত্যজিল রাজ্য মানবের মহা-বেদনার ডাক শুনি’।\n
এই কন্দরে আরব-দুলাল শুনিতেন আহবান,\n
এইখানে বসি’ গাহিলেন তিনি কোরানের সাম-গান!\n
মিথ্যা শুনিনি ভাই,\n
এই হৃদয়ের চেয়ে বড় কোনো মন্দির-কাবা নাই।\n
        \n
        \n
         </string>
    <string name="b">

        \n
        তুমি অমন করে গো বারে বারে জল-ছল-ছল চোখে চেয়ো না,\n
জল-ছল-ছল চোখে চেয়ো না।\n
ঐ কাতর কন্ঠে থেকে থেকে শুধু বিদায়ের গান গেয়ো না,\n
শুধু বিদায়ের গান গেয়ো না।।\n
হাসি দিয়ে যদি লুকালে তোমার সারা জীবনের বেদনা,\n
আজো তবে শুধু হেসে যাও, আজ বিদায়ের দিনে কেঁদো না।\n
ঐ ব্যথাতুর আঁখি কাঁদো-কাঁদো মুখ\n
দেখি আর শুধু হেসে যাও,আজ বিদায়ের দিনে কেঁদো না।\n
চলার তোমার বাকী পথটুকু-\n
পথিক! ওগো সুদূর পথের পথিক-\n
হায়, অমন ক’রে ও অকর”ণ গীতে আঁখির সলিলে ছেয়ো না,\n
ওগো আঁখির সলিলে ছেয়ো না।\n

        \n
        দূরের পথিক! তুমি ভাব বুঝি\n
তব ব্যথা কেউ বোঝে না,\n
তোমার ব্যথার তুমিই দরদী একাকী,\n
পথে ফেরে যারা পথ-হারা,\n
কোন গৃহবাসী তারে খোঁজে না,\n
বুকে ক্ষত হ’য়ে জাগে আজো সেই ব্যথা-লেখা কি?\n
দূর বাউলের গানে ব্যথা হানে বুঝি শুধু ধূ-ধূ মাঠে পথিকে?\n
এ যে মিছে অভিমান পরবাসী! দেখে ঘর-বাসীদের ক্ষতিকে!\n
তবে জান কি তোমার বিদায়- কথায়\n
কত বুক-ভাঙা গোপন ব্যথায়\n
আজ কতগুলি প্রাণ কাঁদিছে কোথায়-\n
পথিক! ওগো অভিমানী দূর পথিক!\n
কেহ ভালোবাসিল না ভেবে যেন আজো\n
মিছে ব্যথা পেয়ে যেয়ো না,\n
ওগো যাবে যাও, তুমি বুকে ব্যথা নিয়ে যেয়ো না।\n
        \n

    </string>
    <string name="A">
        \n
        \n
        কে দিল খোঁপাতে ধুতুরা ফুল লো\n
একডালি ফুলে ওরে সাজাব কেমন করে\n
বউ কথা কও\n
কত খুঁজিলাম নীল কুমুদ তোরে\n
কোথা চাঁদ আমার\n
ফণীর ফণায় জ্বলে মণি\n
মহুল গাছে ফুল ফুটেছে\n
আজি ঘুম নহে, নিশি জাগরণ\n
খোলো খোলো গো দুয়ার\n
ভরিয়া পরান শুনিতেছি গান\n
(ওগো) নতুন নেশার আমার এ মদ\n
মোরা ছিনু একেলা, হইনু দুজন\n
ও ভাই আমার এ নাও যাত্রী না লয়\n
আমার গহীন জলে নদী\n
তোমায় কুলে তুলে বন্ধু আমি নামলাম জলে\n
        \n
    </string>
    <string name="B">
        \n
        \n
বলে রে জবা বল\n
মহাকালের কোলে এসে\n
ভুল করেছি ওমা শ্যামা বনের পশু বলি দিয়ে\n
তোর কালো রূপ লুকাতে মা বৃথাই আয়োজন\n
(ওমা ) দুঃখ অভাব ঋণ যত মোর\n
(আমায় )আর কতদিন মহামায়া\n
ফিরিয়ে দে মা ফিরিয়ে দে গো\n
মোরে আঘাত যত হানবি শ্যামা\n
এস আনন্দিতা ত্রিলোক-বন্দিতা\n
ওরে আলয়ে আজ মহালয়া, মা এসেছে ঘর\n
কে বলে মোর মাকে কালো\n
মা গো আমি তান্ত্রিক নই\n
মা গো তোমার অসীম মাধুরী\n
কে পরালো মুন্ডামালা\n
নাচে রে মোর কালো মেয়ে\n
আনন্দের আনন্দ\n
মা এসেছে মা এসেছে\n
দেখে যারে রুদ্রাণী মা\n\n
মাতল গগন অঙ্গন ঐ\n
শ্মশানকালীর নাম শুনে\n
মা হবি না মেয়ে হবি\n
মা গো আজো বেঁচে তোরি প্রসাদ পেয়ে\n
দুর্গতিনাশিনী আমার\n
যে নামে মা ডেকেছিল সুরথ আর শ্রীমন্ত তোরে\n
পরম পুরুষ সিদ্ধ-যোগী মাতৃভক্ত যুগাবতার\n
জয় বিবেকানন্দ বীর সন্ন্যাসী\n
আমার হৃদয় অধিক রাঙা মা গো\n
মায়ের চেয়েও শান্তিময়ী\n
কেঁদো না কেঁদো না মাকে কে বলেছে কালো\n
তুই পাষাণ গিরির মেয়ে হলি\n
মা গো আমি মন্দমতি\n
শক্তের তুই ভক্ত শ্যামা\n
মা গো আমি আর কি ভুলি\n
ওমা নির্গুণেরে প্রসাদ দিতে\n
আমায় যারা দেয় মা ব্যথা, আমায় যারা আঘাত করে\n
করুণা তোর জানি মা গো\n
আয় নেচে আয় এ বুকে\n
আজও মা তোর পাইনি প্রসাদ\n
কোথায় গেলি মা গো আমার\n
মা কবে তোরে পারব দিতে\n
জগৎ জুড়ে জাল ফেলেছিস্\n
কালী কালী মন্ত্র জপি\n
আদরিণী মোর শ্যামা মেয়ে রে\n
শ্যামা তোর নাম যার জপমালা\n
আমি নামের নেশায় শিশুর মত (ওমা) বক্ষে ধরেন শিব যে চরণ\n
রক্ষা-কালির রক্ষা-কবচ আছে আমায় ঘিরে\n
(আমার) মুক্তি নিয়ে কি হবে মা\n
(মায়ের) অসীম রূপ-সিন্ধুতে রে\n
(আমার) কালো মেয়ে পালিয়ে বেড়ায়\n
জাগো যোগমায়া জাগো মৃন্ময়ী\n
অসুর বাড়ির ফেরৎ এ মা\n
আঁধার ভীত এ চিত যাচে মা গো আলো আলো\n
মা তোর চরণ-কমল ঘিরে\n
আয় মা চঞ্চলা মুক্তকেশী শ্যামা কালী\n
শ্মশানে জাগিছে শ্যামা\n
আয় অশুচি আয় রে পতিত\n
দীনের হতে দীন দুঃখী অধম যথা থাকে\n
(মা) এক্লা ঘরে ডাকব না আর\n
(তুই) বলহীনের বোঝা বহিস্ যেথায় ভৃত্য হয়ে\n
কেন আমায় আনলি মা গো মহারানীর সিন্ধুকূলে\n
ভাগীরথীর ধারার মত সুধার সাগর পড়–ক ঝরে\n
মা গো তোরি পায়ের নূপুর রাজে\n
জ্যোতির্ময়ী মা এসেছে আঁধার আঙিনায়\n
তোর কালো রূপ দেখতে মা গো\n
বল্ মা শ্যামা বল্ তোর বিগ্রহ কি মায়া জানে\n
মাকে ভাসায়ে জলে কেমনে রহিব ঘরে\n
কে সাজালো মাকে আমার\n
(আমার) আনন্দিনী উমা আজো\n
আমার উমা কই\n
গিরিরাজ সংসারেই দোলনাতে মা\n
মহবিদ্য আদ্যাশাক্তি\n
প্রণমামি শ্রীদুর্গে নারায়ণী\n
নন্দলোক থেকে আমি এনেছি রে\n
মায়ের আমার রূপ দেখে যা\n
নিপীড়িতা পৃথিবী ডাকে\n
মোরে আঘাত যত হানবি শ্যামা\n
কেন আমায় আনলি মা গো মহাবাণী সিন্ধুকূলে\n
আয় বিজয়া আয় রে জয়া\n
সর্বনাশি ! মেখে এলি এ কোন চুলোর ছাই\n
আমার কালো মেয়ে রাগ করেছে\n
শ্যামা মায়ের কোলে চড়ে\n
মা ত্রিনয়নী ! সেই চোখ দে\n
মা ! আমি তোর অন্ধ ছেলে\n
আমার শ্যামা বড় লাজুক মেয়ে\n
আমার মা আছে রে সকল নামে\n
ওমা তোর ভুবনে জ্বলে এত আলো\n
ওমা তুই আমারে ছেড়ে আছিস\n
আমার মানস-বনে ফুটেছে রে শ্যামা লতার মঞ্জরী\n
শ্যামা নামের লাগল আগুন আমার দেহ-ধূপকাঠিতে\n
ওমা খড়্গ নিয়ে মাতিস রণে\n
আমার হৃদয় হবে রাঙা জবা\n
দেহ বিল্বদল\n
যে কালীর চরণ পায় রে\n
তোরই নামের কবচ দোলে\n
মাতৃ নামের হোমের শিখা\n
আয় মা ডাকাত কালী আমার ঘরে কর ডাকাতি\n
আমি মুক্তা নিতে আসিনি মা\n
আমি সাধ করে মোর গৌরী মেয়ের\n
আমর ভবের অভাব লয় হয়েছে\n
থির হয়ে তুই বস দেখি মা।\n
        \n
        \n
    </string>
    <string name="C">

        \n
আমি সুন্দর নহি জানি\n
আধো-আধো বোল\n
না-ই পরিলে নোটন-খোঁপায়\n
অয়ি চঞ্চল-লীলায়িত দেহা\n
ভুল করে যদি ভালোবেসে থাকি\n
ঝরাফুল- বিছানো পথে এস\n
প্রিয় এমন রাত যেন যায় না বৃথাই\n
আজ নিশীথে অভিসার তোমার পথে\n
কার মঞ্জীর রিনিঝিনি বাজে\n
নিরুদ্দেশের পথে আমি হারিয়ে যদি যাই\n
বল্ রে তোরা বল্ ওরে ও আকাশ-ভার তারা\n
বল্ সখি বল্ ওরে সরে যেতে বল্\n
নিশি না পোহাতে যেয়ো না যেয়ো না\n
চম্পা পারুল যুথী টগর চামেলি\n
দুর দ্বীপ-বাসিনী চিনি তোমারে চিনি\n
মোমের পুতুল মমীর দেশের মেয়ে\n
বকুল-বনের পাখি ডাকিয়া আর\n
মনের রং লেগেছে বনের পলাশ\n
আধখানা চাঁদ হাসিছে আকাশে\n
যবে সন্ধ্যাবেলায় প্রিয় তুলসী-তলায়\n
আঁখি তোলো দানো করুণা\n
মদির স্বপনে মম বন-ভবনে\n
মুঠি মুঠি আবীর ও কে কাননে ছড়ায়\n
বল্লরী-ভুজ-বন্ধন খোলো\n
তব যাবার বেলা বলে যাও মনের কথা\n
তরুণ অশান্ত কে বিরহী\n
বরষা ঐ এল বরষ্য ঝরে বারি গগনে ঝুরুঝুরু\n
আমি ময়নামতীর শাড়ি দেবো\n
স্নিগ্ধ-শ্যাম-বেণী-বর্ণা এস মালবিকা\n
মেঘ -মেদুর গগন কাঁদে হুতাশ পরন\n
আমি অলস উদাস আনমনা\n
কোয়েলা কুহু কুহু ডাকে\n
তোমার হাতের সোনা রাখি আমার হাতে\n
বাদলা-মেঘের বাদল-তালে ময়ূর নাচে\n
কে দুরন্ত বাজাও ঝড়ের ব্যাকুল বাঁশি\n
এ কি অপরূপ রূপে মা তোমায় হেরিনু পল্লী-জননী\n
দূর প্রবাসে প্রাণ কাঁদে আজ\n
শুভ্র সমুজ্জ্বল হে চির-নির্মল\n
দোলে প্রাণের কোলে প্রভুর নামের মালা\n
শঙ্কাশূন্য লক্ষকণ্ঠে বাজিছে শঙ্খ ঐ\n
চল্ রে চপল তরুণ-দল বাঁধন-হারা\n
বীরদল আগে চল্\n
জননী মোর জন্মভূমি\n
তোমার পায়ে ; কে পরালো মুন্ডমালা\n
নাচে রে মোর কালো মেয়ে\n
মাতলো গগন-অঙ্গনে ঐ\n
দেখে যা-রে রুদ্রাণী মা\n
মহাকালের কোলে এসে গৌরী\n
শ্মশান-কালীর নাম শুনে রে\n
জাগো জাগো শঙ্খ-চক্র-গদা-পদ্মধারী\n
লুকোচুরি খেলতে হরি হার মেনেছে\n
খর রৌদ্রের হোমানল জ্বালি\n
শ্যামা তন্বী আমি মেঘ-বরণা\n
মম আগমনে বাজে আগমনীর সানাই\n
উত্তরীয় লুটায় আমার\n
ওরে ও ¯্রাতের ফুল\n
বুনো ফুলের করুণ সুবাস ঝুরে\n
এল শ্যামল কিশোর\n
এল এল রে বৈশাখী ঝড়\n
ঘুমাও, ঘুমাও ! দেখিতে এসেছি\n
কলঙ্ক আর জোৎস্নায় মেশা তুমি সুন্দর চাঁদ\n
শূন্য এ বুকে পাখি মোর আয়\n
তুমি ভোরের শিশির রাতের নয়ন-পাতে\n
রাত্রি শেষের যাত্রী আমিরাত্রি শেষের যাত্রী আমি\n
ফুলের মতন ফুল্ল মুখে\n
ফিরে ফিরে কেন তারই স্মৃতি\n
আঁধার রাতের তিমির দুলে আমার সামনে\n
দশ হাতে ঐ দশ দিকে মা\n
মা এসেছে মা এসেছে\n
ঐ কাজল-কালো চোখ\n
ও কালো বউ\n
যেয়ো না আর যেয়ো না\n
আগের মত আমের ডালে বোল ধরেছে\n
তোর রূপে সই গাহন করে\n
ঝড়-ঝঞ¦ার ওড়ে নিশান\n
আমার প্রাণের দ্বারে ডাক দিয়ে কে যায়\n
এল ঐ বনাস্তে পাগল বসন্ত\n
সহসা কি গোল বাঁধালো পাপিয়া আর পিকে\n
এস কল্যাণী, চির-আয়ুষ্মতী\n
দাও শৌর্য দাও ধৈর্য হে উদার নাথ\n
চাঁদের দেশের পথ-ভোলা ফুল\n
রঙ্গিলা আপনি রাধা\n
কুঙ্কুম আবীর ফাগের\n
এল ফুল-দোল ওরে\n
যাবার বেলায় ফেলে যেয়ো একটি খোঁপার ফুল\n
জাগো দুস্তর পথের নব-যাত্রী\n
ডেকো না আর দূরের প্রিয়া\n
ভেঙো না ভেঙো না ধ্যান\n
যাহা কিছু মম আছে প্রিয়তম\n
মোর বুক-ভরা ছিল আশা\n
বনে মোর ফুল-ঝরার বেলা\n
মিলন-রাতের মালা হব তোমার অলকে\n
যায় ঝিল্মিল্ ঢেউ তুলে\n
কাজরী গাহিয়া চল গোপ-ললনা\n
এবং তরুণ-তমাল-বরণ এস শ্যামল আমার।\n
        \n
    </string>
<string name="D">
    \n

তুমি বাদশা গানের তখতে\n
ভালোবাসার ছলে আমায়\n
কে নিবি ফুল কে নিবি ফুল\n
পেয়ে আমি হারিয়েছি গো\n
সখি বাঁধো লো বাঁধো লো ঝুলনিয়া\n
যায় ঢুলে ঢুলে এলোচুলে\n
যমুনা-সিনানে\n
নদীর নাম সই অঞ্জনা\n
আল্‌গা কর গো খোঁপার বাঁধন\n
পথ ভোলা কোন রাখাল ছেলে\n
কোকিল, সাধিলি কি বাদ\n
পান্‌সে জোছ্‌নাতে কে\n
ঝল্‌মল্‌ জরিন বেণী\n
কোন বন হতে করেছো চুরি\n
নিশীথ হয়ে আসে ভোর\n
কেমনে কহি প্রিয়\n
নমঃ নমঃ নমঃ বাঙলাদেশ মম\n
প্রিয় যাই যাই বলো না\n
ভোল লাজ ভোল গ্লানি জননী\n
রুমু রুম ঝুম\n
পদ্মদীঘির ধারে ঐ\n
দিতে এলে ফুল- হে প্রিয়\n
কে এলে মোর চির-চেনা অতিথি\n
দোলে নিতি নব রুপের ঢেউ পাথার\n
এলে কি বধুঁ ফুল-ভবনে\n
হে বিধাতা! দুঃখ শোক মাঝে তোমারি পরশ বাজে\n
পাষানের ভাঙালে ঘুম কে তুমি সোনার ছোঁয়ায়\n
বলো না বলো না ওলো সই\n
মরম-কথা গেল সই মরমে মরে\n
চল মন আনন্দ ধাম\n
এস হৃদি রাস মন্দিরে এস\n
আমার সকলি হরেছ হরি\n
যমুনা-কুলে মধুর মধুর মুরলি সখি বাজিল\n
কুসুম সুকুমার শ্যামল তনু\n
কোথায় তুই খুঁজিস ভগবান\n
কেঁদে যায় দখিণ হাওয়া\n
মেরো না আমারে আর নয়ন বাণে\n
হেলে দুলে নীর-ভরণে ও কে যায়\n
বনে মোর ফুটেছে হেনা চামেলি যুথী বেলি\n
ও দুখের বন্ধুরে, ছেড়ে কোথায় গেলি\n
আমি ডুরি-ছেঁড়া ঘুড়ির মতন\n
তুমি ফুল আমি সুতা।\n
মন নিয়ে আমি লুকোচুরি খেলা খেলি প্রিয়ে\n
ভালোবাসায় বাঁধব বাসা\n
মোর মন ছুটে যায় দ্বাপর যুগে\n
চিরদিন কাহারো সমান নাহি যায়\n
দেখে যা তোরা নদীয়ায়\n
কালা এত ভাল কি হে কদম গাছের তলা\n
জবাকুসুম-সঙ্কাশ ঐ অরুণোদয়\n
মাধব বংশীধারী বনওয়ারী গোঠ-চারী\n
আমার কালো মেয়ের পায়ের তলায়\n
শ্যামা তুই বেদেনীর মেয়ে\n
জয় বাণী বিদ্যাদায়ীনী\n
রোদনে তোর বোধন বাজে\n
তুমি দুখের বেশে এলে বলে\n
ওহে রাখাল রাজ!\n
ধ্যান ধরি কিসে হে গুর\n
আর লুকাবি কোথায় মা কালী\n
আমি ভাই ক্ষ্যাপা বাউল\n
ও মা ফিরে এলে কানাই মোদের\n
পথে পথে কে বাজিয়ে চলে বাঁশি\n
ও মন চল অকূল পানে\n
এস মুরলীধারী বৃন্দাবন-চারী\n
নূপুর মধুর রুনুঝুনু বোলে\n
হে গোবিন্দ ও অরবিন্দ\n
ফিরে আয় ভাই গোঠে কানাই\n
সুন্দর বেশে মৃত্যু আমার\n
রাখ রাখ রাঙা পায়\n
মোরে সেই রুপে দেখা দাও হে হরি\n
হৃদয়-সরসী দুলালে পরশি\n
রাখ এ মিনতি ত্রিভুবন-পতি\n
প্রণমি তোমায় বন-দেবতা\n

</string>
    <string name="E">

        \n
        আদি পরম বাণী\n
জয় বীণা বিদ্যাদায়িনী\n
তুমি দুখের বেশে এলে বলে\n
আমি ভাই খ্যাপা বাউল\n
ওহে রাখাল রাজ\n
তুই লুকাবি কোথায় মা\n
চল মন আনন্দ-ধাম\n
নমো নমো নমঃ হে নটনাথ! জাগো জাগো শঙ্খ-চক্র-গদা-পদ্মধারী!\n
বন্দীর মন্দিরে জাগো দেবতা\n
জবা-কুসুম সঙ্কাশ ঐ\n
পূজা-দেউলে মুরারি\n
তিমির বিদারী অলখ-বিহারী\n
নাহি ভয় নাহি ভয়\n
কারা পাষাণ ভেদি জাগো\n
আজি শৃঙ্খলে বাজিছে মাভৈ\n
নীরন্ধ্র মেঘে মেঘে অন্ধ গগন\n
জাগো হে রুদ্র, জাগো রুদ্রাণী\n
কেঁদে যায় দক্ষিণ হাওয়া\n
ঐ পথ চেয়ে থাকি\n
আজি পূর্ণশশী কেন মেঘে ঢাকা\n
মৃদুল মন্দে মঞ্জুল ছন্দে\n
এস এস তব যাত্রা-পথে\n
প্রণমি তোমায় বন-দেবতা\n
ফুলে ফুলে বন ফুলেলা\n
শুক্লা জো‍ৎস্না-তিথি\n
কুসুম-সুকুমার শ্যামল-তুন\n
বন-বিহারিণী চপল হরিণী\n
নিশুতি রাতের শশী\n
তোর বিদায় বেলার বন্ধুরে\n
ঘোর ঘনঘটা ছাইল গগন\n
কেন করুণ সুরে হৃদয-পুরে\n
কেন আসে কেন তারা চলে যায়\n
জয় মর্ত্যরে অমৃতবাদিনী\n
জাগো জাগো বধূ জাগো নব-বাসরে\n
বনে বনে জাগে কি আকুল হরষণ\n
নয়নে ঘনাও মেঘ\n
মালবিকা\n
সুন্দর হে, দাও দাও\n
তুষার-মৌলি জাগো জাগো\n
সন্ধ্যা-আঁধারে ফোটাও\n
কে যাবি পারে আয় ত্বরা করি\n
        \n

    </string>
</resources>